--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,34 +3,39 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '0 */2 * * *' # Runs in every 3 hours
-  pull_request:
-      branches:
-        - main
+    - cron: '0 */2 * * *'   # каждые 2 часа
+  workflow_dispatch:       # ручной запуск (очень полезно)
+
+permissions:
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps: 
+
+    steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-            python-version: '3.x' 
+          python-version: '3.x'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          
-          pip3 install -r requirements.txt
-      - name: execute py script 
+          pip install -r requirements.txt
+
+      - name: Execute script
         run: python main.py config.json
-      - name: commit and push files
+
+      - name: Commit and push files
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "GitHub Actions"
           git add -A
-          git commit -m "updated streams"
+          git commit -m "updated streams" || echo "No changes"
           git push
 
-        
-        
