--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 [
-    {
-        "name": "MyVideo",
+ {
+        "name": "Azeri-yerli",
         "slug": "myvideo-az",
         "url": "http://149.255.152.218/channels.aspx?channel=CHANNEL_NAME.m3u8",
         "method": "GET",
@@ -10,15 +10,6 @@
         "output_filter": "token",
         "headers": {},
         "channels": [
-            {
-                "name": "AZ TV",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "aztv"
-                    }
-                ]
-            },
             {
                 "name": "Medeniyet TV",
                 "variables": [
@@ -128,15 +119,6 @@
                 ]
             },
             {
-                "name": "Real TV",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "real"
-                    }
-                ]
-            },
-            {
                 "name": "MCJ TV Shop",
                 "variables": [
                     {
@@ -160,15 +142,6 @@
                     {
                         "name": "CHANNEL_NAME",
                         "value": "bakutv"
-                    }
-                ]
-            },
-            {
-                "name": "Terra",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "terra"
                     }
                 ]
             },
@@ -202,14 +175,74 @@
         ]
     },
     {
-        "name": "ParsaTV",
-        "slug": "parsatv",
-        "url": "https://www.parsatv.com/embed.php?name=CHANNEL_NAME",
+        "name": "Iran-Music",
+        "slug": "persian",
+        "url": "https://www.parsatv.com/name=CHANNEL_NAME",
         "method": "GET",
         "pattern": "file: \"(.*?)\",",
         "expire_duration": "2H",
         "mode": "variant",
-        "output_filter": "token",
+        "output_filter": "m3u8",
+        "headers": {
+            "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36"
+        },
+        "channels": [
+            {
+                "name": "T2-TV",
+                "variables": [
+                    {
+                        "name": "CHANNEL_NAME",
+                        "value": "T2-TV#persian"
+                    }
+                ]
+            },
+            {
+                "name": "Sun-Music",
+                "variables": [
+                    {
+                        "name": "CHANNEL_NAME",
+                        "value": "Sun-Music#persian"
+                    }
+                ]
+            },
+			{
+                "name": "iTV-Persian-Music",
+                "variables": [
+                    {
+                        "name": "CHANNEL_NAME",
+                        "value": "iTV-Persian-Music#persian"
+                    }
+                ]
+            },
+			{
+                "name": "AFN-Music",
+                "variables": [
+                    {
+                        "name": "CHANNEL_NAME",
+                        "value": "AFN-Music#persian"
+                    }
+                ]
+            },
+			{
+                "name": "MTC",
+                "variables": [
+                    {
+                        "name": "CHANNEL_NAME",
+                        "value": "MTC#persian"
+                    }
+                ]
+            }
+		]
+	},
+    {
+        "name": "ParsaTV",
+        "slug": "parsatv",
+        "url": "https://www.parsatv.com/name=CHANNEL_NAME",
+        "method": "GET",
+        "pattern": "file: \"(.*?)\",",
+        "expire_duration": "2H",
+        "mode": "variant",
+        "output_filter": "m3u8",
         "headers": {
             "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36"
         },
@@ -219,7 +252,7 @@
                 "variables": [
                     {
                         "name": "CHANNEL_NAME",
-                        "value": "ZDF"
+                        "value": "ZDF#deutsch"
                     }
                 ]
             },
@@ -228,7 +261,7 @@
                 "variables": [
                     {
                         "name": "CHANNEL_NAME",
-                        "value": "VOX"
+                        "value": "VOX#deutsch"
                     }
                 ]
             },
@@ -238,150 +271,6 @@
                     {
                         "name": "CHANNEL_NAME",
                         "value": "Sixx"
-                    }
-                ]
-            },
-            {
-                "name": "RTL",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "RTL"
-                    }
-                ]
-            },
-            {
-                "name": "RTL 2",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "RTL-Zwei"
-                    }
-                ]
-            },
-            {
-                "name": "RTL Nitro",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "RTL-Nitro"
-                    }
-                ]
-            },
-            {
-                "name": "Super RTL",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "Super-RTL"
-                    }
-                ]
-            },
-            {
-                "name": "DMAX",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "DMAX"
-                    }
-                ]
-            },
-            {
-                "name": "ProSieben",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "ProSieben"
-                    }
-                ]
-            },
-            {
-                "name": "ProSieben MAXX",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "ProSieben-MAXX"
-                    }
-                ]
-            },
-            {
-                "name": "ntv",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "ntv"
-                    }
-                ]
-            },
-            {
-                "name": "Welt",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "Welt"
-                    }
-                ]
-            },
-            {
-                "name": "Sat1",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "Sat1"
-                    }
-                ]
-            },
-            {
-                "name": "Sat1 Gold",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "Sat1-Gold"
-                    }
-                ]
-            },
-            {
-                "name": "WDR",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "Westdeutscher-Rundfunk"
-                    }
-                ]
-            },
-            {
-                "name": "Kabel 1",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "Kabel-Eins"
-                    }
-                ]
-            },
-            {
-                "name": "Tele 5",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "Tele-5"
-                    }
-                ]
-            },
-            {
-                "name": "ARD",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "ARD"
-                    }
-                ]
-            },
-            {
-                "name": "3sat",
-                "variables": [
-                    {
-                        "name": "CHANNEL_NAME",
-                        "value": "3sat"
                     }
                 ]
             }
