--- a/catcast-config.json
+++ b/catcast-config.json
@@ -42,5 +42,17 @@
     {
         "id": "48591",
         "slug": "turkuzplay1"
-    }
+    },
+    	{
+		"id": "38617",
+		"slug": "kino-1"
+	},
+	{
+		"id": "41057",
+		"slug": "AZ OLASZ MELÓ ⑫"
+	},
+	{
+		"id": "50370",
+		"slug": "KomediAz"
+	}
 ]
