--- a/catcast-config.json
+++ b/catcast-config.json
@@ -1,9 +1,5 @@
 [
     {
-        "id": "49905",
-        "slug": "abantv"
-    },
-    {
         "id": "39199",
         "slug": "alvin-music"
     },
@@ -22,10 +18,6 @@
     {
         "id": "49903",
         "slug": "korkutv"
-    },
-    {
-        "id": "49906",
-        "slug": "masailekocaayi"
     },
     {
         "id": "48110",
@@ -48,8 +40,8 @@
 		"slug": "kino-1"
 	},
 	{
-		"id": "41057",
-		"slug": "AZ OLASZ MELÓ ⑫"
+		"id": "50437",
+		"slug": "Car-video"
 	},
 	{
 		"id": "50370",
