--- a/catcast-config.json
+++ b/catcast-config.json
@@ -1,9 +1,5 @@
 [
     {
-        "id": "39199",
-        "slug": "alvin-music"
-    },
-    {
         "id": "39200",
         "slug": "alvin-ovcu"
     },
@@ -14,10 +10,6 @@
     {
         "id": "47437",
         "slug": "kanal-65"
-    },
-    {
-        "id": "49903",
-        "slug": "korkutv"
     },
     {
         "id": "48110",
@@ -42,6 +34,10 @@
 	{
 		"id": "50437",
 		"slug": "Car-video"
+	},
+	{
+		"id": "34816",
+		"slug": "Strax-TV"
 	},
 	{
 		"id": "50370",
