--- a/catcast-config.json
+++ b/catcast-config.json
@@ -42,5 +42,17 @@
 	{
 		"id": "50370",
 		"slug": "KomediAz"
+	},
+	{
+		"id": "41327",
+		"slug": "Detektiv-TV"
+	},
+	{
+		"id": "50372",
+		"slug": "PlayerCinema-TV"
+	},
+	{
+		"id": "50472",
+		"slug": "PlayerFilmAzerbaycan-TV"
 	}
 ]
